11.1.6 (31-10-2023)
- Refactor: Rename method PaymentRequestLog#isInvocationSuccess to PaymentRequestLog#isOperationSuccess [#qubIT-Fenix-4327]

11.1.5 (27-10-2023)
- Bug Fix: NPE in creation registration tuition, in cases where the amount for a tuition installment is zero [#qubIT-Fenix-4417]
- Bug Fix: When editing installment, save the installment order [#qubIT-Fenix-4401]
- Refactor: Remove the temporary fix flag for the correct academic tax debit entry date [relates to fix applied in version 8.6.7 of 16-02-2023]

11.1.4 (18-10-2023)
- Refactor: Rename method parameter for better code readability [#qubIT-Fenix-4459]
- Improvement: Add to AcademicTreasuryEvent a method to merge with a target person, which basically set the person and allow merge data of treasury event targets. For now support only for ReservationTaxEventTarget [#qubIT-Fenix-4459]

11.1.3 (28-09-2023)
- Refactor: Fix the academic treasury event degree association and use the DML AcademicTreasuryEvent and Degree relation (#qubIT-Fenix-4374)
- Bug Fix: Fix tuition payment plan tuition deletion for many degree curricular plans. The reorder of tuition payment plan orders was fixed (#qubIT-Fenix-4401)
- Bug Fix: Fix tuition payment plan creation, when the tuition payment plan orders are not strictly sequential (<previous order> + 1) (#qubIT-Fenix-4402)
- Bug Fix: Add specific method factory to create TuitionPaymentPlanBean, when copying a tuition payment plan, to fix the copy of tuition calculators (#qubIT-Fenix-4403)

11.1.2 (21-09-2023)
- Improvement: In exemptions request by file, read the product of treasury event by code, besides reading by description (#UL-FC-4400)
- Improvement: In exemptions request by file, if the debit entry name is not specified, consider only debit entries in treasury event which are not interests (#UL-FC-4400)

11.1.1 (19-09-2023)